welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: value =! is not a member of Int
while (nbBiscuit=!4) {
                ^RunFour:4: error: value update is not a member of Boolean
	if (estSurBiscuit()=true) {
            ^